--- a/css/style.scss
+++ b/css/style.scss
@@ -156,3 +156,8 @@ $grid-spacing: {{ site.data.settings.grid_settings.grid_spacing }}px;
 
 @import "_includes/_portfolio";
 @import "_includes/_blog";
+
+p {
+	text-align: justify;
+	
+}
