Massive site upgrade and design change

--- a/_sass/_includes/_header.scss
+++ b/_sass/_includes/_header.scss
@@ -231,8 +231,10 @@
 	&.active-link {
 		color: $overlay-accent-color;
 
+
 		@include mq(tabletl) {
-			color: $text-dark-color;
+			color: #fff;
+			font-weight: 600;
 			border-color: $accent-color;
 		}
 	}
