--- a/_sass/_includes/_portfolio.scss
+++ b/_sass/_includes/_portfolio.scss
@@ -4,19 +4,19 @@
 
 // - - - - - - - - - - - - - - - - - -
 
-.portfolio {
-	padding: 0 $grid-spacing/2;
-}
+// .portfolio {
+// 	padding: 0 $grid-spacing/2;
+// }
 
-.portfolio-wrap {
+// .portfolio-wrap {
 	
-}
+// }
 
 .portfolio-item {
 	position: relative;
 	padding: $grid-spacing/2;
 	float: left;
-	width: 50%;
+	width: 100%;
 }
 
 .portfolio-item__link {
@@ -49,7 +49,7 @@
 	align-items: center;
 	justify-content: center;
 	background: rgba($overlay-background-color, $overlay-opacity);
-
+	border: 0.5rem solid #fff;
 	opacity: 0;
 	visibility: hidden;
 	@include transition(all 0.2s ease-in-out);
